--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,16 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #202142;
+  background-color: #85b8cb;
   color: #fff;
   line-height: 1.6;
+}
+
+.appContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
 }
 
 ul {
@@ -30,6 +37,14 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+}
+.footer {
+  display: flex;
+  color:#202142;
+  background-color: #1d6a96;
+  height: 70px;
+  width: 100%;
+  margin-top: auto;
 }
 
 .card {
@@ -87,7 +102,7 @@ header {
 
 .rating li:hover,
 .num-display {
-  background: #ff6a95;
+  background: #1d6a96;
   color: #fff;
 }
 
@@ -96,7 +111,7 @@ header {
 }
 
 [type="radio"]:checked ~ label {
-  background: #ff6a95;
+  background: #1d6a96;
   color: #fff;
 }
 
@@ -160,7 +175,7 @@ input:focus {
 }
 
 .btn-secondary {
-  background: #ff6a95;
+  background: #1d6a96;
 }
 
 .btn:hover {
@@ -182,7 +197,7 @@ input:focus {
 .message {
   padding-top: 10px;
   text-align: center;
-  color: rebeccapurple;
+  color: #283b42;
 }
 
 /* FIX: Remove position: absolute to keep about icon at the bottom of the
@@ -200,7 +215,7 @@ input:focus {
 }
 
 .about-link a:hover {
-  color: #ff6a95;
+  color: #1d6a96;
 }
 
 .about h1 {
